<resources>
    <string name="app_name">Credinka en Línea</string>
    <string name="title_activity_main">Credinka</string>
    <string name="point">•</string>
    <string name="str_numero_td">Número de Tarjeta</string>
    <string name="str_numero_dni">Número de DNI</string>
    <string name="str_password_recover">¿La olvidaste?</string>
    <string name="str_clave_web">Clave Web</string>
    <string name="str_ingresar">Ingresar</string>
    <string name="textTouch">Huella</string>
    <string name="str_ubicanos">Ubícanos</string>
    <string name="str_bloqueo_td">Bloquear Tarjeta</string>
    <string name="str_llamanos">Llámanos</string>
    <string name="str_bloquear">Bloquear</string>
    <string name="str_numbers">0123456789</string>
    <string name="str_productos">Productos</string>
    <string name="str_ofertas">Ofertas para ti</string>
    <string name="str_mas">Más</string>
    <string name="str_aceptar">Aceptar</string>
    <string name="str_ingrese_tarjeta">Ingrese número de tarjeta</string>
    <string name="str_ingrese_documento">Ingrese número de dni</string>
    <string name="str_ingrese_clave">Ingrese su clave web</string>
    <string name="str_ingrese_documento_valido">Ingrese número de dni válido</string>
    <string name="str_ingrese_td_correcta">Por favor ingrese número de tarjeta correcta</string>
    <string name="str_ingrese_clave_correcta">Ingrese clave web válido</string>
    <string name="str_error_cargar_info">En este momento no hemos podido cargar la información solicitada</string>
    <string name="str_mis_cuentas">Mis Cuentas</string>
    <string name="str_mis_creditos">Mis Créditos</string>
    <string name="str_error_general_servicio">No se pudo sincrononizar los datos. Por favor intente nuevamente mas tarde</string>
    <string name="str_saldo_contable">Saldo Contable</string>
    <string name="str_saldo_disponible">Saldo Disponible</string>
    <string name="str_mis_movimientos">Mis Movimientos</string>
    <string name="str_sin_movimiento">La cuenta seleccionada no tiene movimientos</string>
    <string name="str_sin_cuotas_pendientes">¡Felicidades! No tienes cuotas pendientes de pago</string>
    <string name="str_movimientos">Movimientos</string>
    <string name="str_nro_transaccion">N° de Transacción</string>
    <string name="str_fecha_movimiento">Fecha de Movimiento</string>
    <string name="str_moneda">Moneda</string>
    <string name="str_importe_movimiento">Importe de Movimiento</string>
    <string name="str_importe">Importe</string>
    <string name="str_total_cuotas">Total de cuotas</string>
    <string name="str_saldo_capital">Saldo capital</string>
    <string name="str_monto_proxima_cuota">Monto del próxima cuota</string>
    <string name="str_monto_original">Monto original</string>
    <string name="str_tasa_efectiva_anual">Tasa efectiva anual</string>
    <string name="str_fecha_pago">Fecha de pago</string>
    <string name="str_dias_atraso">Días de atraso</string>
    <string name="str_cuotas_restantes">Cuotas restantes</string>
    <string name="str_cronograma">Cronograma de pagos</string>
    <string name="str_ofertas_para_ti">Ofertas para ti</string>
    <string name="str_contacto">Contacto</string>
    <string name="str_descripcion_contacto">Para comunicarte con nuestra central telefónica comunicate al:</string>
    <string name="str_lima">Lima</string>
    <string name="str_provincias">Provincias</string>
    <string name="str_descripcion_horario">Horario de atención de nuestra central telefónica es de Lunes a Viernes de 8:00 a.m. a 6:00 p.m.</string>
    <string name="str_bloqueo_td_debito">Bloqueo de Tarjeta de Débito</string>
    <string name="str_descripcion_bloqueo_td">En caso de pérdida o robo  de su tarjeta  de débito, solicite inmediatamente el bloqueo de su tarjeta comunicándose a la central de Servicio al Cliente de Unibanca o apersónese a cualquiera de nuestras Agencias</string>
    <string name="str_a_nivel_nacional">A nivel nacional</string>
    <string name="str_usa_canada">En USA y Canadá</string>
    <string name="str_resto_mundo">Resto del mundo</string>
    <string name="str_perfil">Mi Perfil</string>
    <string name="str_descripcion_ubicanos">Ubica nuestras agencias y puntos de atención</string>
    <string name="str_tipo_cambio">Tipo de cambio</string>
    <string name="str_descripcion_tipo_cambio">Referencial</string>
    <string name="str_compra">Compra</string>
    <string name="str_venta">Venta</string>
    <string name="str_cerrar_sesion">Cerrar sesión</string>
    <string name="str_error_service_response_code">En estos momentos no te podemos atender, por favor intenta nuevamanete mas tarde (90)</string>
    <string name="title_activity_ubicacion_maps">Map</string>
    <string name="str_timer_sesion">Ud. ha superado el tiempo de inactividad. Por favor ingrese nuevamente sus datos</string>
    <string name="str_service_not_response">Lo sentimos, en estos momentos no está disponible el servicio. Por favor intenta nuevamente mas tarde</string>
    <string name="str_info_olvido_clave">¿Te olvidaste tu clave?\n Ingresa desde portal credinka en línea para generar tu clave de 6 dígitos</string>
    <string name="str_nombre">Nombres:</string>
    <string name="str_apellidos">Apellidos:</string>
    <string name="str_fecha_ultimo_aaceso">Último Acceso:</string>
    <string name="str_error_usuario_bloqueado">Tu cuenta ha sido bloqueado por seguridad por reintentos fallidos. Ingrese nuevamente mas tarde</string>
    <string name="str_error_clave">La cuenta ingresada no se encuentra asociado a nuestra banca por internet</string>
    <string name="str_error_cuenta_no_existe">Los datos ingresados son incorrectos</string>
    <string name="str_oferta_creditos">CRÉDITOS</string>
    <string name="str_consulta_oferta_credito">Consulta si tienes una oferta aquí</string>
    <string name="str_felicidad">¡Felicidades!</string>
    <string name="str_tienes_un_monto">Tienes un monto evaluable de:</string>
    <string name="str_texto_contacto">Para continuar con la evaluación comunicate con tu asesor de negocios</string>
    <string name="str_sesion_abierta">Actualmente ya se encuentra con la sesión abierta en otro punto</string>
    <string name="fileprovider">com.credinkamovil.pe.fileprovider</string>
    <string name="str_conoce_cronograma">Conoce tu cronograma detallado haciendo</string>
    <string name="str_conoce_eecc">Conoce tu estado de cuenta haciendo</string>
    <string name="str_clic_aqui">Clic Aquí</string>
    <string name="str_imagen">Imagen</string>
    <string name="str_dialog_si">Si</string>
    <string name="str_dialog_no">No</string>
    <string name="str_confirmacion">Confirmación</string>
    <string name="str_descripcion_prefil">Ver datos de mi cuenta</string>
    <string name="str_crea_tu_cuenta_aqu">Crea tu cuenta aquí</string>
    <string name="str_ahorros">AHORROS</string>
    <string name="str_compra_tu_seguro_aqu">Compra tu seguro aquí</string>
    <string name="str_soat">SOAT</string>
    <string name="str_apertura_cuenta_ahr">Apertura de cuentas de ahorro</string>
    <string name="str_tipo_cuenta">Tipo de cuenta</string>
    <string name="str_tipo_moneda">Tipo de moneda</string>
    <string name="str_selecciona_tipo_cuenta">Selecciona tipo de cuenta</string>
    <string name="str_soles">Soles</string>
    <string name="str_dolar">Dólares</string>
    <string name="str_celular_afiliado">Celular afiliado</string>
    <string name="str_siguiente">Siguiente</string>
    <string name="str_descripcion_celular_afil">A continuación  te enviaremos el código de confirmación mediante SMS al número afiliado.</string>
    <string name="str_descripcion_celular_sms">Acabamos de enviarte el codigo de confirmación a tu celular. Por favor ingrese el código para continuar</string>
    <string name="str_codigo_confirmacion">Código de confirmación</string>
    <string name="str_finalizar">Finalizar</string>
    <string name="str_seleccionar_spinner">Seleccione</string>
    <string name="str_ingrese_codigo_sms">Ingrese código de confirmación que acabamos de enviarte.</string>
    <string name="str_credinka">FINACIERA CREDINKA</string>
    <string name="str_mensaje_confirm_oferta">En los próximos días se contactará un representante de FINANCIERA CREDINKA</string>
    <string name="str_estado_cuenta">Estado de cuenta</string>
    <string name="str_cargando">Cargando…</string>
    <string name="str_hora_trx">Hora Trans.</string>
    <string name="str_desc_info_eecc">Puedes solicitar los estados de cuenta hasta los últimos 24 meses. Si desea los estados de meses anteriores, por favor acércate a cualquiera de nuestra agencias más cercanas.</string>
    <string name="str_indicator_pg">0%</string>
</resources>