<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ofertas.OfertasFragment">

    <LinearLayout
        android:id="@+id/ly_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_ofertas_para_ti"
            android:textSize="@dimen/dimen_18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@id/rl_oferta_creditos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/banner_creditos"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/str_consulta_oferta_credito"
            android:textColor="@color/colorGray1"
            android:textSize="@dimen/dimen_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_2dp"
            android:gravity="center_vertical"
            android:text="@string/str_oferta_creditos"
            android:textColor="@color/colorWhite0"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/rl_cuenta_ahorro"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/banner_ahorros"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/str_crea_tu_cuenta_aqu"
            android:textColor="@color/colorGray1"
            android:textSize="@dimen/dimen_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_2dp"
            android:gravity="center_vertical"
            android:text="@string/str_ahorros"
            android:textColor="@color/colorWhite0"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/banner_soat"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/str_compra_tu_seguro_aqu"
            android:textColor="@color/colorGray5"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_2dp"
            android:gravity="center_vertical"
            android:text="@string/str_soat"
            android:textColor="@color/colorWhite0"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>